# SafeContextualReward

./: .gitignore  main.py  pyproject.toml  quick_start.sh  requirements.txt
models/linguistic_models/cmudict/: cmudict_phono_tables.pkl
models/linguistic_models/english_us_arpa/: cmudict_phono_tables.pkl  meta.json  phones.sym
notebooks/document_synthesis/: document_formating.ipynb
notebooks/pseudo_document/: stats.ipynb
notebooks/word_synthesis/: word_freq_results.ipynb  word_sample_results.ipynb
notebooks/word_synthesis/real_word/: test.html
src/data_construction/document_synthesis/: document_filter.py  document_synthesis4rpj_all.py  document_synthesis4rpj_unsafe.py  document_synthesis4toxicmix4pw.py  document_synthesis4toxicmix4rs.py  toxic_document.py
src/data_construction/download/: download_redpajama.py
src/data_construction/llm_generate/: doc_generate.py
src/data_construction/word_synthesis/: candidate_filter.py  concept_synthesis.py  cosine_similarity_pseudoword.py  p2gwfst.py  test_main.py  union_with_wordfreq.py  word_count_from_infini.py  word_embedding_llama.py  word_synthesis.py
