[project]
name = "safecontextualreward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.1.1",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.108.2",
    "pynini>=2.1.7",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
    "wordfreq>=3.1.1",
]
